--- a/admin/settings.html
+++ b/admin/settings.html
@@ -38,6 +38,7 @@
       <a href="tank-crud.html">Tank CRUD</a>
       <a href="ammo.html">Ammo</a>
       <a href="terrain.html">Terrain</a>
+      <a href="map-crud.html">Map CRUD</a>
       <a href="users.html">Users</a>
       <a href="settings.html">Game Settings</a>
     </aside>
