--- a/admin/admin.html
+++ b/admin/admin.html
@@ -51,6 +51,6 @@
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/chart.js@4"></script>
-  <script type="module" src="admin.js"></script>
+  <script type="module" src="js/admin.js"></script>
 </body>
 </html>
