--- a/admin/ammo.html
+++ b/admin/ammo.html
@@ -98,6 +98,6 @@
     </main>
   </div>
 
-  <script type="module" src="admin.js"></script>
+  <script type="module" src="js/admin.js"></script>
 </body>
 </html>
