--- a/admin/login.html
+++ b/admin/login.html
@@ -20,6 +20,6 @@
     </form>
     <div id="loginError" role="alert"></div>
   </div>
-  <script type="module" src="login.js"></script>
+  <script type="module" src="js/login.js"></script>
 </body>
 </html>
