--- a/admin/map-crud.html
+++ b/admin/map-crud.html
@@ -185,8 +185,8 @@
           onerror="this.onerror=null;this.src='/libs/plotly-3.1.0.min.js';"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js@4.5.0/dist/chart.umd.min.js" crossorigin="anonymous"
           onerror="this.onerror=null;this.src='/libs/chart-4.5.0.min.js';"></script>
-  <script type="module" src="admin.js"></script>
-  <script type="module" src="terrain-editor.js"></script>
-  <script type="module" src="map-crud.js"></script>
+  <script type="module" src="js/admin.js"></script>
+  <script type="module" src="js/terrain-editor.js"></script>
+  <script type="module" src="js/map-crud.js"></script>
 </body>
 </html>
