--- a/admin/tank-crud.html
+++ b/admin/tank-crud.html
@@ -66,6 +66,6 @@
     </main>
   </div>
 
-  <script type="module" src="tank-crud.js"></script>
+  <script type="module" src="js/tank-crud.js"></script>
 </body>
 </html>
