--- a/admin/tanks.html
+++ b/admin/tanks.html
@@ -212,6 +212,6 @@
     </main>
   </div>
 
-  <script type="module" src="admin.js"></script>
+  <script type="module" src="js/admin.js"></script>
 </body>
 </html>
