--- a/admin/users.html
+++ b/admin/users.html
@@ -52,6 +52,6 @@
     </main>
   </div>
 
-  <script type="module" src="admin.js"></script>
+  <script type="module" src="js/admin.js"></script>
 </body>
 </html>
