--- a/public/signup.html
+++ b/public/signup.html
@@ -35,6 +35,6 @@
     <p>Already have an account? <a href="/login.html">Log in</a></p>
     <div id="authError"></div>
   </div>
-  <script type="module" src="auth.js"></script>
+  <script type="module" src="js/auth.js"></script>
 </body>
 </html>
