--- a/admin/terrain.html
+++ b/admin/terrain.html
@@ -110,7 +110,18 @@
             <label for="groundViscosity">Viscosity (0-1)</label>
             <input id="groundViscosity" type="number" step="0.1" min="0" max="1" value="0.5">
 
+            <label for="groundTexture">Texture</label>
+            <select id="groundTexture">
+              <option value="grass">Grassland</option>
+              <option value="mud">Muddy Ruts</option>
+              <option value="snow">Powder Snow</option>
+              <option value="sand">Desert Dunes</option>
+              <option value="rock">Rocky Plate</option>
+            </select>
+            <p class="field-desc">Pick the repeating texture that should render for this ground type in-game.</p>
+
             <button id="addGroundBtn">Add Ground Type</button>
+            <button id="resetGroundBtn" type="button">Reset Selection</button>
           </div>
 
           <div id="elevationControls" class="tool-panel" style="display:none">
@@ -124,12 +135,13 @@
             <input type="range" id="eBrushSizeZ" min="1" max="20" value="5">
 
             <label for="perlinScale">Perlin Scale</label>
-            <input type="number" id="perlinScale" min="1" max="100" value="10">
+            <input type="number" id="perlinScale" min="1" max="200" value="12">
 
             <label for="perlinAmplitude">Perlin Amplitude</label>
-            <input type="number" id="perlinAmplitude" min="1" max="100" value="100">
+            <input type="number" id="perlinAmplitude" min="1" max="100" value="24">
 
             <button id="perlinBtn">Generate Perlin Terrain</button>
+            <p class="instructions">Save the map after regenerating so the Perlin settings persist with the terrain.</p>
           </div>
 
           <div id="flagControls" class="tool-panel" style="display:none">
@@ -170,6 +182,25 @@
           <label for="lockCamera">Lock Position</label>
           <input type="checkbox" id="lockCamera">
           <p class="field-desc">Prevent accidental camera movement.</p>
+
+          <h3>Sun &amp; Ambient Lighting</h3>
+          <p class="instructions">Position the sun and tweak colours to match each biome. Changes take effect after saving and restarting the match.</p>
+
+          <label for="sunPosX">Sun Position X (m)</label>
+          <input type="number" id="sunPosX" value="200" step="10">
+
+          <label for="sunPosY">Sun Position Y (m)</label>
+          <input type="number" id="sunPosY" value="400" step="10">
+
+          <label for="sunPosZ">Sun Position Z (m)</label>
+          <input type="number" id="sunPosZ" value="200" step="10">
+
+          <label for="sunColor">Sun Colour</label>
+          <input type="color" id="sunColor" value="#ffe8a3">
+
+          <label for="ambientColor">Ambient Colour</label>
+          <input type="color" id="ambientColor" value="#1f2a3c">
+          <p class="field-desc">Ambient colour tints the skybox and shadows for the entire battlefield.</p>
 
           <button id="saveTerrainBtn">Save Map</button>
           <button id="cancelEditBtn">Cancel</button>
